# jax_trees

./: .gitignore  Pipfile  README.md  benchmark.ipynb  decision_tree.py  demo.ipynb  demo_forest.ipynb  pyproject.toml  setup.cfg  setup.py
decision_tree/: __init__.py  bagging.py  decision_tree.py  viz.py
decision_tree/jax/: __init__.py  classifier.py  decision_tree.py  regressor.py  utils.py
decision_tree/jax/gradient_boosting/: classifier.py  regressor.py
decision_tree/jax/random_forest/: classifier.py  regressor.py
decision_tree/numpy/: __init__.py  bagging.py  decision_tree.py  random_forest.py
decision_tree/tests/: test_entropy.py
examples/: benchmark.ipynb  demo.ipynb  demo_classifier.ipynb  demo_forest.ipynb  demo_regressor.ipynb
jax_trees/: __init__.py  viz.py
jax_trees/jax/: __init__.py  classifier.py  core.py  gradient_boosting.py  random_forest.py  regressor.py  utils.py
jax_trees/jax/gradient_boosting/: classifier.py
jax_trees/jax/random_forest/: classifier.py  regressor.py
jax_trees/jax/v1/: classifier.py  regressor.py
jax_trees/numpy/: random_forest.py  trees.py
tests/: test_entropy.py  test_jax.py  test_jax_classifier.py  test_jax_regressor.py  test_jax_utils.py
