[metadata]
name = decision_tree
description = Classic ML algorithms
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scikit-learn
    prettytable

[options.extras_require]
jax =
    jax

graphviz =
    graphviz
    pygraphviz