[metadata]
name = jax_trees
description = Classic ML algorithms
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scikit-learn
    prettytable

[options.extras_require]
cpu =
    jax[cpu]

cuda =
    jax[cuda]

graphviz =
    graphviz
    pygraphviz

[tox:tox]
min_version = 3.0
env_list =
    lint

[testenv:lint]
skip_install = true
deps =
    black
    isort
commands =
    black .
    isort .
