[metadata]
name = jax_trees
description = Classic ML algorithms
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scikit-learn
    prettytable

[options.extras_require]
cpu =
    jax[cpu]

cuda =
    jax[cuda]

graphviz =
    graphviz
    pygraphviz

[easy_install]
find_links = https://storage.googleapis.com/jax-releases/jax_cuda_releases.html

[tox:tox]
min_version = 3.0
env_list =
    lint
    deploy

[testenv:lint]
skip_install = true
deps =
    black
    jupyter-black
    isort
    flake8
commands =
    isort .
    black .
    flake8 jax_trees

[testenv:deploy]
skip_install = true
deps =
    twine
    build
commands =
    python -m build
    twine upload -r testpypi dist/*
